<resources>
    <string name="app_name">Where In The World</string>
    <string name="bolt_startup" translatable="false">bolt.startup</string>

    <string name="game_mode">Game Mode</string>
    <string name="game_mode_solo">Solo</string>
    <string name="game_mode_quick_challenge">Quick Challenge</string>
    <string name="game_mode_friend_challenge">Challenge Friends</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_to_google_play">Sign in to Play Games</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="cancel">Cancel</string>
    <string name="btn_guess">Guess the location</string>
    <string name="btn_hint">Hint</string>
    <string name="score">Score: %1$d</string>
    <string name="actual_location_marker_title">Location for round %1$d</string>
    <string name="guess_location_marker_title">Guess for round %1$d</string>
    <string name="difficulty_dialog_title">Select Game Difficulty</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_extreme">Extreme</string>

    <string name="hint_dialog_title">Choose a Hint</string>
    <string name="quit_game_title">Quit game?</string>
    <string name="quit_game_message">Are you sure you want to quit? Your current progress will be lost.</string>
    <string name="quit_game_confirm">Quit</string>
    <string name="hint_dialog_message">Hints reduce the score multiplier for this round. Choose one, or cancel to keep your full score.</string>
    <string name="hint_score_multiplier">%1$s score multiplier</string>
    <string name="hint_revealed">%1$s: %2$s</string>
    <string name="hint_none">No hint</string>
    <string name="hint_country">Country</string>
    <string name="hint_landmark">Landmark</string>

    <string name="confirm_guess">Tap to confirm guess</string>
    <string name="tutorial_snippet">To make a guess, press and hold on\nthe map to drop a pin like this one.</string>

    <!-- BaseGameUtils -->
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
</resources>
