<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/welcome_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/cd_welcome_background"
            android:scaleType="centerCrop"
            tools:background="@drawable/welcome_eiffel"/>

    <View
            android:id="@+id/panel_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="192dp"
            android:layout_marginBottom="192dp"
            android:background="@color/glass_background_color"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/game_mode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/panel_background"
            android:text="@string/game_mode"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/panel_background"
            android:textColor="@color/glass_text_color"
            android:textSize="18sp"/>

    <Button
            android:id="@+id/btn_solo_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_mode_title"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_action_user"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="@id/panel_background"
            app:layout_constraintEnd_toEndOf="@id/panel_background"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/panel_background"
            app:layout_constraintBottom_toTopOf="@id/btn_quick_challenge_mode"
            android:text="@string/game_mode_solo"/>

    <Button
            android:id="@+id/btn_quick_challenge_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_solo_mode"
            app:layout_constraintStart_toStartOf="@id/panel_background"
            app:layout_constraintEnd_toEndOf="@id/panel_background"
            app:layout_constraintBottom_toTopOf="@id/btn_friend_challenge_mode"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_action_users"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/btn_solo_mode"
            android:enabled="false"
            android:text="@string/game_mode_quick_challenge"/>

    <Button
            android:id="@+id/btn_friend_challenge_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="@id/panel_background"
            app:layout_constraintEnd_toEndOf="@id/panel_background"
            android:layout_below="@id/btn_quick_challenge_mode"
            android:drawableStart="@drawable/ic_action_users"
            app:layout_constraintTop_toBottomOf="@id/btn_quick_challenge_mode"
            app:layout_constraintBottom_toBottomOf="@id/panel_background"
            android:enabled="false"
            android:text="@string/game_mode_friend_challenge"/>

    <Button
            android:id="@+id/btn_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            app:layout_constraintStart_toEndOf="@id/btn_all_leaderboards"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/achievements"/>

    <Button
            android:id="@+id/btn_all_leaderboards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/leaderboards"/>

</androidx.constraintlayout.widget.ConstraintLayout>
